--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -11,13 +11,43 @@
 // Typography
 //
 
+@font-family-global: OpenSans, sans-serif;
+
+@font-weight-thin: 300;
+@font-weight-global: 400;
+@font-weight-thick: 600;
+@font-weight-fat: 700;
+
+@font-size-global: 12px;
+@font-size-large: 14px;
+@font-size-big: 16px;
+
+@font-size-header-small: 23px;
+@font-size-header-normal: 29px;
+@font-size-header-large: 44px;
+
 //
 // Colors
 //
 
+@font-color-global: #ffffff;
+@font-color-primary: #773dbe;
+@font-color-secondary: #eb358a;
+
 //
 // Backgrounds
 //
+
+@bg-global-primary: #290b59;
+@bg-global-secondary: #4c2287;
+@bg-global-tertiary: #472076;
+
+@bg-button-primary: #773dbe;
+@bg-button-secondary: #eb358a;
+@bg-button-tertiary: #ffffff;
+
+@bg-input-primary: #180348;
+
 
 //
 // Borders
