css classes and vars 1

--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -30,17 +30,19 @@
 // Colors
 //
 
-@font-color-global: #ffffff;
+@font-color-global: rgba(255, 255, 255, 0.5);
 @font-color-primary: #773dbe;
 @font-color-secondary: #eb358a;
+@font-color-default: #ffffff;
 
 //
 // Backgrounds
 //
 
 @bg-global-primary: #290b59;
-@bg-global-secondary: #4c2287;
-@bg-global-tertiary: #472076;
+@bg-global-secondary: #472076;
+@bg-global-tertiary: #4c2287;
+@bg-top: #6c1bd0;
 
 @bg-button-primary: #773dbe;
 @bg-button-secondary: #eb358a;
