--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -1,4 +1,5 @@
 html {
+  //background-color: darkblue;
   font-family: @font-family-global;
   font-weight: @font-weight-global;
   font-size: @font-size-global;
@@ -9,8 +10,36 @@ html {
 //UK-Reset
 //
 
+.uk-logo {
+  font-family: @font-family-global;
+  font-size: @font-size-header-large;
+  color: @font-color-default;
+
+  span {
+    color: #c08cff;
+  }
+}
+
+.uk-navbar-nav>li>a {
+  font-family: @font-family-global;
+  font-size: @font-size-big;
+  color: @font-color-default;
+}
+
+.uk-button {
+  font-size: @font-size-large;
+  border-radius: 3px;
+}
+
 .uk-button-primary {
   background-color: @bg-button-primary;
+  color: @font-color-default;
+  box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.27);
+}
+
+.uk-button-primary:focus, .uk-button-primary:hover, .uk-button-primary:active {
+  background-color: @bg-button-secondary;
+  color: @font-color-default;
 }
 
 .uk-button-secondary {
