--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -1,5 +1,5 @@
 html {
-  background-color: darkblue;
+  background-image: url("/images/bg-game.jpg");
   font-family: @font-family-global;
   font-weight: @font-weight-global;
   font-size: @font-size-global;
@@ -41,6 +41,10 @@ h3 {
   color: @font-color-default;
 }
 
+.uk-input, .uk-select, .uk-textarea {
+  color: @font-color-default;
+}
+
 .uk-button {
   font-size: @font-size-large;
   border-radius: 3px;
@@ -52,7 +56,7 @@ h3 {
   box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.27);
 }
 
-.uk-button-primary:focus, .uk-button-primary:hover, .uk-button-primary:active {
+.uk-button-primary:focus, .uk-button-primary:hover, .uk-button-primary.uk-active, .uk-button-primary:active {
   background-color: @bg-button-secondary;
   color: @font-color-default;
 }
@@ -65,6 +69,12 @@ h3 {
 .uk-button-default {
   background-color: transparent;
   color: @font-color-default;
+}
+
+.uk-button-default:focus, .uk-button-default:hover, .uk-button-default.uk-active, .uk-button-default:active {
+  background-color: transparent;
+  color: @font-color-default;
+  border-color: #999;
 }
 
 .uk-background-primary {
@@ -99,4 +109,6 @@ h3 {
 
 .tm-button-whitelist{
   font-size: @font-size-big;
+  font-weight: @font-weight-thick;
+  text-transform: none;
 }
