styling top in progress 2

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -39,6 +39,7 @@ h3 {
   font-family: @font-family-global;
   font-size: @font-size-big;
   color: @font-color-default;
+  text-transform: none;
 }
 
 .uk-input, .uk-select, .uk-textarea {
@@ -56,6 +57,7 @@ h3 {
 .uk-button {
   font-size: @font-size-large;
   border-radius: 3px;
+
 }
 
 .uk-button-primary {
@@ -119,17 +121,26 @@ h3 {
 //Theme
 //Local
 //
+.tm-button-new {
+  text-transform: none;
+  font-weight: @font-weight-thick;
+}
 
 .tm-button-whitelist{
-  //width: 120px;
-  //height: 40px;
+  width: 120px;
+  height: 40px;
   font-size: @font-size-big;
   font-weight: @font-weight-thick;
-  //padding: 0;
+  padding: 0;
 }
 
 .tm-input-top {
   font-size: @font-size-big;
   font-weight: @font-weight-thick;
   padding: 15px;
+}
+
+
+.tm-box-large {
+  padding: 40px 25px 30px;
 }
