styling top in progress 4

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -117,6 +117,15 @@ h3 {
 .tm-background-top {
   background-color: @bg-top;
 }
+
+.tm-fontweight-normal {
+  font-weight: @font-weight-global;
+}
+
+.tm-text-secondary {
+  color: @font-color-secondary;
+}
+
 //
 //Theme
 //Local
@@ -134,12 +143,20 @@ h3 {
   padding: 0;
 }
 
+.tm-button-filter {
+  background-color: @bg-global-tertiary;
+  color: @font-color-global;
+}
+
 .tm-input-top {
   font-size: @font-size-big;
   font-weight: @font-weight-thick;
   padding: 15px;
 }
 
+.tm-box-small {
+  padding: 25px 30px;
+}
 
 .tm-box-large {
   padding: 40px 25px 30px;
