--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -96,6 +96,31 @@ h3 {
   background-color: @bg-global-secondary;
 }
 
+.uk-card {
+  //width: 160px;
+  //height: 200px;
+  background-color: @bg-global-tertiary;
+  border-radius: 3px;
+  padding: 15px 10px;
+  box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.1);
+
+  h3{
+    margin: 0;
+  }
+}
+
+.uk-card-header {
+  padding: 5px 0;
+}
+
+.uk-card-body {
+  padding: 15px 0;
+  color: @font-color-default;
+}
+
+.uk-card-footer {
+  padding: 5px 0;
+}
 
 //
 //Theme
@@ -160,4 +185,11 @@ h3 {
 
 .tm-box-large {
   padding: 40px 25px 30px;
+}
+
+//not tm
+
+.bet {
+  font-size: @font-size-header-normal;
+  color: @font-color-default;
 }
