--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -101,7 +101,7 @@ h3 {
   //height: 200px;
   background-color: @bg-global-tertiary;
   border-radius: 3px;
-  padding: 15px 10px;
+  padding: 10px;
   box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.1);
 
   h3{
