index adaptive fixes

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -4,6 +4,7 @@ html {
   font-weight: @font-weight-global;
   font-size: @font-size-global;
   color: @font-color-global;
+  min-width: 320px;
 }
 
 h2 {
@@ -192,4 +193,31 @@ h3 {
 .bet {
   font-size: @font-size-header-normal;
   color: @font-color-default;
+}
+
+
+//Header
+
+
+@media (max-width: 559px) {
+
+  .tm-header {
+
+
+    > .uk-container {
+
+      .uk-navbar-left, .uk-navbar-right {
+        width: 100%;
+        margin: 0;
+      }
+    }
+
+    .uk-logo {
+      font-size: 40px;
+    }
+  }
+
+  .tm-header-navbar {
+    flex-wrap: wrap;
+  }
 }
