--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -1,4 +1,6 @@
 html {
+  background-size: cover;
+  background-repeat: no-repeat;
   background-image: url("/images/bg-game.jpg");
   font-family: @font-family-global;
   font-weight: @font-weight-global;
@@ -75,6 +77,10 @@ h3 {
   background-color: @bg-button-secondary;
   color: @font-color-default;
 }
+.uk-button-secondary:focus, .uk-button-secondary:hover, .uk-button-secondary.uk-active, .uk-button-secondary:active {
+  background-color: @bg-button-secondary;
+  color: @font-color-default;
+}
 
 .uk-button-default {
   background-color: transparent;
@@ -100,6 +106,7 @@ h3 {
   //width: 160px;
   //height: 200px;
   background-color: @bg-global-tertiary;
+  color: @font-color-default;
   border-radius: 3px;
   padding: 10px;
   box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.1);
@@ -135,61 +142,67 @@ h3 {
   text-transform: none;
 }
 
+.tm-button-tertiary:hover, .tm-button-tertiary:focus {
+
+}
+
 .tm-background-tertiary {
   background-color: @bg-global-tertiary;
 }
 
-.tm-background-top {
+.tm-top {
   background-color: @bg-top;
+
+  .uk-input {
+    font-size: @font-size-big;
+    font-weight: @font-weight-thick;
+    padding: 15px;
+  }
 }
 
-.tm-fontweight-normal {
-  font-weight: @font-weight-global;
+.tm-games {
+
+  h2 {
+    font-weight: @font-weight-global;
+  }
 }
 
-.tm-text-secondary {
-  color: @font-color-secondary;
-}
+  .tm-text-secondary {
+    color: @font-color-secondary;
+  }
 
-//
-//Theme
-//Local
-//
-.tm-button-new {
-  text-transform: none;
-  font-weight: @font-weight-thick;
-}
+  //
+  //Theme
+  //Local
+  //
+  .tm-button-new {
+    text-transform: none;
+    font-weight: @font-weight-thick;
+  }
 
-.tm-button-whitelist{
-  width: 120px;
-  height: 40px;
-  font-size: @font-size-big;
-  font-weight: @font-weight-thick;
-  padding: 0;
-}
+  .tm-button-whitelist{
+    width: 120px;
+    height: 40px;
+    font-size: @font-size-big;
+    font-weight: @font-weight-thick;
+    padding: 0;
+  }
 
-.tm-button-filter {
-  background-color: @bg-global-tertiary;
-  color: @font-color-global;
-}
+  .tm-button-filter {
+    background-color: @bg-global-tertiary;
+    color: @font-color-global;
+  }
 
-.tm-input-top {
-  font-size: @font-size-big;
-  font-weight: @font-weight-thick;
-  padding: 15px;
-}
+  .tm-box-small {
+    padding: 25px 30px;
+  }
 
-.tm-box-small {
-  padding: 25px 30px;
-}
+  .tm-box-large {
+    padding: 40px 25px 30px;
+  }
 
-.tm-box-large {
-  padding: 40px 25px 30px;
-}
+  //not tm
 
-//not tm
-
-.bet {
-  font-size: @font-size-header-normal;
-  color: @font-color-default;
-}
+  .bet {
+    font-size: @font-size-header-normal;
+  }
