styling card-body borders

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -135,6 +135,8 @@ h3 {
 .uk-card-body {
   padding: 15px 0;
   color: @font-color-default;
+  border-top: 1px solid rgba(255,255,255,0.1);
+  border-bottom: 1px solid rgba(255,255,255,0.1);
 }
 
 .uk-card-footer {
