--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -248,21 +248,13 @@ h3 {
 
 .tm-card-private {
   h3.tm-title-marked:before {
-    //content: "\f084";
-    content: "";
-    background-image: url("/images/game-private.png");
-    width: 14px;
-    height: 14px;
+    content: "\f255";
   }
 }
 
 .tm-card-open {
   h3.tm-title-marked:before {
-    //content: "\f0c0";
-    content: "";
-    background-image: url("/images/game-public.png");
-    width: 20px;
-    height: 12px;
+    content: "\f369";
   }
 }
 
