--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -318,3 +318,9 @@ h3 {
   background-color: @bg-input-primary;
   font-size: @font-size-large;
 }
+
+//Raffle
+
+.tm-raffle-wrap {
+  padding: 30px 30px 40px;
+}
