--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -70,7 +70,7 @@ h3 {
 .uk-button {
   font-size: @font-size-large;
   border-radius: 3px;
-  min-height: 40px;
+  height: 40px;
 
 }
 
@@ -78,21 +78,21 @@ h3 {
   background-color: @bg-button-primary;
   color: @font-color-default;
   box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.27);
-}
 
-.uk-button-primary:focus, .uk-button-primary:hover, .uk-button-primary.uk-active, .uk-button-primary:active {
-  background-color: @bg-button-secondary;
-  color: @font-color-default;
+  &:focus, &:hover, &.uk-active, &:active {
+    background-color: @bg-button-secondary;
+    color: @font-color-default;
+  }
 }
 
 .uk-button-secondary {
   background-color: @bg-button-secondary;
   color: @font-color-default;
-}
 
-.uk-button-secondary:focus, .uk-button-secondary:hover, .uk-button-secondary.uk-active, .uk-button-secondary:active {
-  background-color: @bg-button-secondary;
-  color: @font-color-default;
+  &:focus, &:hover, &.uk-active, &:active {
+    background-color: @bg-button-secondary;
+    color: @font-color-default;
+  }
 }
 
 .uk-button-default {
@@ -100,12 +100,12 @@ h3 {
   color: @font-color-default;
   text-transform: none;
   padding: 0 75px;
-}
 
-.uk-button-default:focus, .uk-button-default:hover, .uk-button-default.uk-active, .uk-button-default:active {
-  background-color: transparent;
-  color: @font-color-default;
-  border-color: #999;
+  &:focus, &:hover, &.uk-active, &:active {
+    background-color: transparent;
+    color: @font-color-default;
+    border-color: #999;
+  }
 }
 
 .uk-background-primary {
@@ -171,10 +171,6 @@ h3 {
   text-transform: none;
 }
 
-.tm-button-tertiary:hover, .tm-button-tertiary:focus {
-
-}
-
 .tm-background-tertiary {
   background-color: @bg-global-tertiary;
 }
@@ -196,9 +192,12 @@ h3 {
   }
 
   .tm-box {
-    padding: 25px 30px;
+    padding: 0 30px 25px;
   }
 
+  .tm-game-cards {
+    padding: 25px 0 0;
+  }
 
   h2 {
     font-weight: @font-weight-global;
@@ -238,6 +237,26 @@ h3 {
   color: @font-color-global;
 }
 
+.tm-button-role {
+  height: 30px;
+  line-height: 28px;
+  background-color: @bg-input-primary;
+  text-transform: none;
+
+  &:active, &.uk-active, &:hover {
+    background-color: @bg-button-primary;
+  }
+
+  &.tm-role-user {
+    border-radius: 3px 0 0 3px;
+  }
+
+  &.tm-role-creator {
+    border-radius: 0 3px 3px 0;
+  }
+
+}
+
 .tm-box-small {
   padding: 15px 30px;
 }
@@ -255,6 +274,26 @@ h3 {
 .tm-card-open {
   h3.tm-title-marked:before {
     content: "\f369";
+  }
+}
+
+.tm-filter {
+  padding: 20px 0;
+  border-bottom: 1px solid rgba(255,255,255,0.2);
+
+  .uk-input {
+    background-color: @bg-input-primary;
+    color: @font-color-default;
+    font-size: @font-size-global;
+    font-weight: @font-weight-global;
+    padding: 0 10px;
+    max-width: 70px;
+    height: 30px;
+  }
+
+  .uk-button-secondary {
+    height: 30px;
+    line-height: 28px;
   }
 }
 
