--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -1,7 +1,6 @@
 html {
+  background: url("/images/bg-game.jpg") no-repeat center top;
   background-size: cover;
-  background-repeat: no-repeat;
-  background-image: url("/images/bg-game.jpg");
   font-family: @font-family-global;
   font-weight: @font-weight-global;
   font-size: @font-size-global;
