--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -31,6 +31,7 @@ h3 {
 
 .uk-logo {
   font-family: @font-family-global;
+  font-weight: @font-weight-fat;
   font-size: @font-size-header-large;
   color: @font-color-default;
 
@@ -323,6 +324,7 @@ h3 {
 @media (max-width: 559px) {
 
   .tm-header {
+    padding: 40px 0;
 
     > .uk-container {
 
