--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -11,7 +11,7 @@
 // Typography
 //
 
-@font-family-global: OpenSans, sans-serif;
+@font-family-global: 'Open Sans', sans-serif;
 
 @font-weight-thin: 300;
 @font-weight-global: 400;
