--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -251,6 +251,7 @@ h3 {
   background-color: @bg-global-tertiary;
   color: @font-color-global;
   max-width: 110px;
+  transition: none;
 
   &.tm-toggle-active {
     position: relative;
