--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -398,10 +398,13 @@ h3 {
   font-size: @font-size-large;
 }
 
+
 //Raffle
 
 .tm-raffle-wrap {
   padding: 30px 30px 40px;
 }
 
-.tm-members-list {}
+.tm-members-list {
+
+}
