--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -18,8 +18,8 @@
 @font-weight-thick: 600;
 @font-weight-fat: 700;
 
-@font-size-global: 12px;
-@font-size-large: 14px;
+@font-size-global: 14px;
+@font-size-small: 12px;
 @font-size-big: 16px;
 
 @font-size-header-small: 23px;
@@ -39,7 +39,7 @@
 // Backgrounds
 //
 
-@bg-global-primary: #290b59;
+@bg-global-primary: #2b125d; //#290b59;
 @bg-global-secondary: #472076;
 @bg-global-tertiary: #4c2287;
 @bg-top: #6c1bd0;
