--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -18,7 +18,7 @@ h2 {
 h3 {
   font-family: @font-family-global;
   font-weight: @font-weight-global;
-  font-size: @font-size-global;
+  font-size: @font-size-small;
   color: @font-color-global;
   text-transform: uppercase;
   margin: 0 0 10px 0;
@@ -76,7 +76,6 @@ h3 {
 }
 
 .uk-button {
-  font-size: @font-size-large;
   border-radius: 3px;
   height: 40px;
 
@@ -96,7 +95,7 @@ h3 {
 .uk-button-secondary {
   background-color: @bg-button-secondary;
   color: @font-color-default;
-  box-shadow: inset 0px 1px 0 0 rgba(255, 255, 255, 0.27);
+  box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.27);
 
   &:focus, &:hover, &.uk-active, &:active {
     background-color: darken(@bg-button-secondary,15%);
@@ -321,7 +320,7 @@ h3 {
   .uk-input {
     background-color: @bg-input-primary;
     color: @font-color-default;
-    font-size: @font-size-global;
+    font-size: @font-size-small;
     font-weight: @font-weight-global;
     padding: 0 10px;
     max-width: 70px;
@@ -388,14 +387,14 @@ h3 {
   background-color: @bg-input-primary;
   background-position: 98% 50%;
   color: @font-color-global;
-  font-size: @font-size-large;
+  font-size: @font-size-global;
 }
 
 .tm-select-filter.uk-select:not([multiple]):not([size]) {
   height: 30px;
   width: 150px;
   background-color: @bg-input-primary;
-  font-size: @font-size-large;
+  font-size: @font-size-global;
 }
 
 
@@ -410,5 +409,51 @@ h3 {
 }
 
 .tm-members-list {
+
+  li {
+    position: relative;
+    padding: 0 20px 0 40px;
+    line-height: 42px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    color: #654d88;
+    background-color: @bg-global-primary;
+    border-left: 3px solid #4a2f73;
+
+    &::before, &::after {
+      display: block;
+      position: absolute;
+      top: 0;
+      line-height: inherit;
+      font-family: FontAwesome;
+      font-size: 22px;
+      color: #4a2f73;
+    }
+
+    &::before {
+      content: "\f27b";
+      left: 10px;
+    }
+
+    &::after {
+      content: "\f23b";
+      right: 16px;
+    }
+
+    &.tm-connected {
+      color: #ac6aff;
+      border-left-color: #9a57ff;
+
+      &::before {
+        color: #fff;
+      }
+
+      &::after {
+        display: none;
+      }
+    }
+
+  }
 
 }
