--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -404,9 +404,9 @@ h3 {
   padding: 30px 30px 40px;
 }
 
-.tm-raffle-canvas {
+/*.tm-raffle-canvas {
   height: 492px;
-}
+}*/
 
 .tm-members-list {
 
