uk-select remove

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -1,5 +1,5 @@
 html {
-  background: url("/images/bg-game.jpg") no-repeat center top;
+  background: url("../../images/bg-game.jpg") no-repeat center top;
   background-size: cover;
   font-family: @font-family-global;
   font-weight: @font-weight-global;
@@ -58,13 +58,6 @@ h3 {
   color: @font-color-default;
   border: 1px solid transparent;
   border-radius: 3px;
-}
-
-.uk-select:not([multiple]):not([size]) {
-  background-image: url("/images/select-arrow-down.png");
-  background-repeat: no-repeat;
-  padding-right: 30px;
-  background-position: 95% 50%;
 }
 
 .uk-form-icon {
