--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -1,5 +1,5 @@
 html {
-  background: url("/images/bg-game.jpg") no-repeat center top;
+  background: url("../../images/bg-game.jpg") no-repeat center top;
   background-size: cover;
   font-family: @font-family-global;
   font-weight: @font-weight-global;
