--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -56,6 +56,10 @@ h3 {
   margin-top: 15px;
 }
 
+.uk-container {
+  max-width: 982px;
+}
+
 .uk-logo {
   font-family: @font-family-global;
   font-weight: @font-weight-fat;
