--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -115,6 +115,11 @@ h3 {
   border: none;
 }
 
+.uk-button-large {
+  height: 60px;
+  text-transform: none;
+}
+
 .uk-button-primary {
   background-color: @bg-button-primary;
   color: @font-color-default;
@@ -532,4 +537,11 @@ h3 {
 .tm-background-secondary {
   background-color: @bg-global-secondary;
   border-radius: 0 0 5px 5px;
+}
+
+.tm-fonts-alt {
+  h2 {
+    font-size: 18px;
+    color: @font-color-global
+  }
 }
