--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -118,6 +118,8 @@ h3 {
 .uk-button-large {
   height: 60px;
   text-transform: none;
+  font-size: 20px;
+  font-weight: @font-weight-thick;
 }
 
 .uk-button-primary {
