--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -547,3 +547,8 @@ h3 {
     color: @font-color-global
   }
 }
+
+.tm-text-bets {
+  color: @font-color-default;
+  font-weight: @font-weight-thick;
+}
