game footer margin fix 1

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -573,6 +573,7 @@ h3 {
   h2 {
     font-size: 18px;
     color: #c08cff;
+    margin: 0 0 15px 0;
   }
 
   .uk-input {
@@ -589,11 +590,4 @@ h3 {
 .tm-text-bets {
   color: @font-color-default;
   font-weight: @font-weight-thick;
-}
-
-.tm-game-footer {
-  h2 {
-    font-size: 18px;
-    color: #c08cff;
-  }
 }
