--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -275,6 +275,10 @@ h3 {
   .select2-results__option--highlighted[aria-selected] {
     background-color: @bg-button-secondary;
   }
+
+  &.select2-container--open .select2-selection--single .select2-selection__arrow::before {
+    content: "\f113";
+  }
 }
 
 
