--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -269,7 +269,7 @@ h3 {
   }
 
   .select2-results__option[aria-selected=true] {
-    background-color: @bg-button-primary;
+    background-color: @bg-global-secondary;
   }
 
   .select2-results__option--highlighted[aria-selected] {
