--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -635,3 +635,16 @@ h3 {
   color: @font-color-default;
   font-weight: @font-weight-thick;
 }
+
+.tm-top-alt {
+  h2 {
+    color: #c08cff;
+  }
+
+  .bet {
+    font-weight: @font-weight-thick;
+    color: @font-color-default;
+    font-size: 62px;
+    white-space: nowrap;
+  }
+}
