--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -330,6 +330,25 @@ h3 {
     max-width: 130px;
   }
 
+  .select2-container .select2-selection--single {
+    height: 40px;
+  }
+
+  .select2-container--default {
+
+    .select2-selection--single {
+      background-color: @bg-global-secondary;
+
+      .select2-selection__rendered {
+        line-height: 40px;
+      }
+
+      .select2-selection__arrow {
+        height: 40px;
+      }
+    }
+  }
+
   .select2-container--default .select2-selection--single {
     background-color: @bg-global-secondary;
   }
