--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -95,7 +95,7 @@ h3 {
 
 .uk-input, .uk-select, .uk-textarea {
   color: @font-color-default;
-  border: 1px solid transparent;
+  border: none;
   border-radius: 3px;
 }
 
@@ -104,11 +104,9 @@ h3 {
   color: @font-color-default;
   font-size: @font-size-big;
   text-transform: uppercase;
-  padding: 0 10px;
 }
 
 .uk-button {
-  padding: 0 20px;
   border-radius: 3px;
   line-height: 30px;
   font-size: @font-size-global;
@@ -223,7 +221,7 @@ h3 {
 
   .select2-selection__rendered {
     padding-left: 10px;
-    padding-right: 30px;
+    padding-right: 40px;
   }
 }
 
@@ -254,7 +252,7 @@ h3 {
       position: absolute;
       top: 0;
       right: 0;
-      width: 30px;
+      width: 40px;
 
       &::before {
         content: "\f110";
@@ -323,11 +321,23 @@ h3 {
 .tm-top {
   background-color: @bg-top;
 
+  .uk-button {
+    line-height: 40px;
+  }
+
   .uk-input {
     font-size: @font-size-big;
     font-weight: @font-weight-thick;
-    padding: 0 15px;
     max-width: 130px;
+    padding: 0 15px;
+  }
+
+  .uk-form-icon {
+    padding: 0 5px;
+  }
+
+  .uk-form-icon-flip~.uk-input {
+    padding-right: 50px!important;
   }
 
   .select2-container .select2-selection--single {
@@ -337,6 +347,7 @@ h3 {
   .select2-container--default {
 
     .select2-selection--single {
+      font-size: 16px;
       background-color: @bg-global-secondary;
 
       .select2-selection__rendered {
@@ -352,10 +363,6 @@ h3 {
   .select2-container--default .select2-selection--single {
     background-color: @bg-global-secondary;
   }
-}
-
-.tm-box {
-  padding: 25px 30px 25px;
 }
 
 .tm-games {
@@ -386,6 +393,7 @@ h3 {
 //Local
 //
 .tm-button-new {
+  padding: 0 20px;
   line-height: 36px;
   text-transform: none;
   font-weight: @font-weight-thick;
@@ -497,6 +505,10 @@ h3 {
   }
 }
 
+.tm-select-top {
+  min-width: 140px;
+}
+
 //not tm
 
 .bet {
@@ -536,9 +548,6 @@ h3 {
   padding: 30px 30px 40px;
 }
 
-/*.tm-raffle-canvas {
-  height: 492px;
-}*/
 
 .tm-members-list {
 
@@ -604,7 +613,7 @@ h3 {
 }
 
 .tm-user-icon {
-  background-image: url("/images/layer-891.png");
+  background-image: url("../../images/layer-891.png");
   background-repeat: no-repeat;
   background-position: -1px 100%;
   background-size: contain;
