--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -680,6 +680,10 @@ h3 {
     font-size: 62px;
     white-space: nowrap;
   }
+
+  .uk-grid-divider>:not(.uk-first-column)::before {
+    border-left: 1px solid rgba(0,0,0,0.1);
+  }
 }
 
 .tm-leader-list {
@@ -702,8 +706,4 @@ h3 {
       left: 10px;
     }
   }
-}
-
-.tm-border-left {
-  border-left: 1px solid rgba(0,0,0,0.1);
 }
