--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -199,6 +199,10 @@ h3 {
     font-family: FontAwesome;
     color: @font-color-default;
   }
+
+  .uk-button {
+    font-size: @font-size-small;
+  }
 }
 
 .uk-card-header {
