--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -436,18 +436,20 @@ h3 {
 .tm-button-filter {
   background-color: @bg-global-tertiary;
   color: @font-color-global;
-  max-width: 110px;
+  font-size: @font-size-small;
+  width: 120px;
   transition: none;
 
   &.tm-toggle-active {
     position: relative;
     background-color: @bg-global-primary;
-    //height: 60px;
-    line-height: 20px;
-    //padding-bottom: 20px;
+    line-height: 14px;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    margin-bottom: -28px;
     border-radius: 3px 3px 0 0;
 
-    &:before {
+   /* &:before {
       position: absolute;
       bottom: -20px;
       left: 0;
@@ -456,7 +458,7 @@ h3 {
       background-color: @bg-global-primary;
       content: '';
     }
-
+*/
   }
 }
 
@@ -516,6 +518,10 @@ h3 {
     padding: 0 10px;
     max-width: 70px;
     height: 30px;
+  }
+
+  .uk-button {
+    padding: 0 20px;
   }
 
   .uk-button-secondary {
