--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -240,7 +240,7 @@ h3 {
     border-bottom: none;
     border-left: 1px solid rgba(255, 255, 255, 0.1);
     border-right: 1px solid rgba(255, 255, 255, 0.1);
-    padding: 0 15px;
+    padding: 0 5px;
   }
 
  .tm-game-type-marker {
@@ -617,6 +617,15 @@ h3 {
   }
 }
 
+@media (min-width: 960px) and (max-width: 970px) {
+  .uk-card-small {
+
+    .uk-card-body {
+      padding: 0 1%;
+    }
+  }
+}
+
 //Raffle
 
 .tm-raffle-wrap {
@@ -768,7 +777,7 @@ h3 {
 .tm-leader-list {
   li {
     position: relative;
-    padding: 0 20px 0 40px;
+    padding: 0 0 0 35px;
 
     &::before {
       display: block;
