--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -777,7 +777,7 @@ h3 {
 .tm-leader-list {
   li {
     position: relative;
-    padding: 0 0 0 35px;
+    padding: 0 0 0 25px;
 
     &::before {
       display: block;
@@ -791,7 +791,7 @@ h3 {
 
     &::before {
       content: "\f27b";
-      left: 10px;
+      left: 0;
     }
   }
 }
