--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -36,8 +36,16 @@ h3 {
 //
 
 .uk-container {
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+@media (min-width: 960px) {
+
+  .uk-container {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 }
 
 .uk-grid {
