--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -429,10 +429,6 @@ h3 {
     border-radius: 5px 5px 0 0;
   }
 
-  .tm-box {
-    padding: 0 30px 25px;
-  }
-
   .tm-game-cards {
     padding: 25px 0 0;
   }
@@ -520,6 +516,21 @@ h3 {
 
 .tm-box-large {
   padding: 30px;
+}
+
+@media (max-width: 959px) {
+
+  .tm-box {
+    padding: 20px;
+  }
+
+  .tm-box-small {
+    padding: 15px 20px;
+  }
+
+  .tm-box-large {
+    padding: 30px 20px;
+  }
 }
 
 .tm-card-private {
