--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -568,6 +568,13 @@ h3 {
   }
 }
 
+@media (max-width: 639px) {
+
+  .tm-select-filter {
+    width: 100%;
+  }
+}
+
 .tm-select-top {
   min-width: 140px;
 }
