--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -573,6 +573,14 @@ h3 {
   .tm-select-filter {
     width: 100%;
   }
+
+  .tm-top {
+
+    .uk-input {
+      max-width: 100%;
+      width: 100%;
+    }
+  }
 }
 
 .tm-select-top {
