--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -832,7 +832,6 @@ h3 {
     background-color: @font-color-primary;
     box-shadow: inset 0px 1px 0 0 rgba(255, 255, 255, 0.27);
     border-radius: 3px;
-    padding-left: 0;
 
     svg {
       fill: #fff;
@@ -889,5 +888,12 @@ h3 {
 
   .tm-header {
     padding: 5px 0;
+  }
+}
+
+@media (max-width: 639px) {
+
+  .tm-social div {
+    max-width: 40px;
   }
 }
