--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -621,6 +621,12 @@ h3 {
   }
 }
 
+@media (max-width: 369px) {
+  .uk-card-small .uk-card-header, .uk-card-small .uk-card-body, .uk-card-small .uk-card-footer {
+    padding: 5px 0;
+  }
+}
+
 @media (max-width: 639px) {
   .uk-card-small {
 
